--- a/modules/account_payment_sepa_cog/locale/fr.po
+++ b/modules/account_payment_sepa_cog/locale/fr.po
@@ -104,6 +104,10 @@ msgctxt "field:account.payment.payment_creation.start,payer:"
 msgid "Account Owner"
 msgstr "Titulaire du compte"
 
+msgctxt "field:account.payment.sepa.mandate,amended_by:"
+msgid "Amended By"
+msgstr "Amendé par"
+
 msgctxt "field:account.payment.sepa.mandate,amendment_of:"
 msgid "Amendment Of"
 msgstr "Amendement de"
