--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -178,6 +178,10 @@ msgctxt "field:contract,subscriber_kind:"
 msgid "Subscriber Kind"
 msgstr "Type de souscripteur"
 
+msgctxt "field:contract,summary:"
+msgid "Summary"
+msgstr "Synthèse"
+
 msgctxt "field:contract,termination_reason:"
 msgid "Termination Reason"
 msgstr "Motif de résiliation"
@@ -1074,7 +1078,8 @@ msgctxt "field:offered.configuration.default_quote_number_sequence,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:offered.option.description,allow_subscribe_coverage_multiple_times:"
+msgctxt ""
+"field:offered.option.description,allow_subscribe_coverage_multiple_times:"
 msgid "Allow subscribe coverage multiple times"
 msgstr "Autoriser la souscription de la garantie plusieurs fois"
 
@@ -1228,13 +1233,13 @@ msgstr ""
 "conditions d'une souscription de contrat. Sinon, la date de conditions sera "
 "la date d'effet."
 
-msgctxt "help:offered.option.description,allow_subscribe_coverage_multiple_times:"
+msgctxt ""
+"help:offered.option.description,allow_subscribe_coverage_multiple_times:"
 msgid ""
-"If set, you will be allowed to cover an element was already covered with"
-" the same options at the same date on different contracts"
+"If set, you will be allowed to cover an element that was already covered "
+"with the same options at the same date on different contracts"
 msgstr ""
-"Si défini, vous pourrez couvrir un élément déjà couvert avec les "
-"mêmes options à la même date sur différents contrats"
+"Si coché, un même élément pourra être couvert plusieurs fois par la même garantie à une même date"
 
 msgctxt "help:offered.option.description.ending_rule,automatic_sub_status:"
 msgid ""
