--- a/modules/contract_insurance_document_request/locale/fr.po
+++ b/modules/contract_insurance_document_request/locale/fr.po
@@ -161,13 +161,13 @@ msgstr "Règles de gestion des documents"
 msgctxt "help:contract,document_token:"
 msgid "This token allows to retrieve document requests linked to the holder"
 msgstr ""
-"Ce jeton permet de retrouver les demandes de documents liés au porteur du "
+"Ce jeton permet de retrouver les demandes de documents liées au porteur du "
 "jeton."
 
 msgctxt "help:contract.covered_element,document_token:"
 msgid "This token allows to retrieve document requests linked to the holder"
 msgstr ""
-"Ce jeton permet de retrouver les demandes de documents liés au porteur du "
+"Ce jeton permet de retrouver les demandes de documents liées au porteur du "
 "jeton."
 
 msgctxt "help:document.request.line,details:"
@@ -180,9 +180,9 @@ msgid ""
 "and dictionnaries as values. The possible keys for these sub dictionnaries "
 "are : [('blocking', 'blocking'), ('max_reminders', 'max_reminders')] "
 msgstr ""
-"La règle doit retourner un dictionnaire dont les clés sont des codes de "
-"type de documents, et dont les valeurs sont des dictionnaires. Les "
-"clés possibles pour ces sous-dictionnaires sont : ['blocking']"
+"La règle doit retourner un dictionnaire dont les clés sont des codes de type"
+" de documents, et dont les valeurs sont des dictionnaires. Les clés "
+"possibles pour ces sous-dictionnaires sont : ['blocking']"
 
 msgctxt "help:offered.option.description,document_rules:"
 msgid ""
