--- a/modules/contract_option_extra_details/locale/fr.po
+++ b/modules/contract_option_extra_details/locale/fr.po
@@ -64,7 +64,8 @@ msgstr "Identifiant XML"
 
 msgctxt "help:offered.option.description,extra_details_rule:"
 msgid ""
-"Rule used to update extra details (called anytime there is a contract change)"
+"Rule used to update extra details (called anytime there is a contract "
+"change)"
 msgstr ""
 "Règle de mise à jour des données de détails (exécutée à chaque mise à jour "
 "du contrat)"
