--- a/modules/document_request_electronic_signature/locale/fr.po
+++ b/modules/document_request_electronic_signature/locale/fr.po
@@ -133,9 +133,12 @@ msgid "XML Id"
 msgstr "XML Id"
 
 msgctxt "help:document.description.signature.coordinate,signature_page:"
-msgid "The page on which the signature must appear. 1 is the first and -1 the last"
+msgid ""
+"The page on which the signature must appear. 1 is the first and -1 is the "
+"last"
 msgstr ""
-"La page sur laquelle la signature doit apparaître. 1 est la première et -1 la dernière"
+"La page sur laquelle la signature doit apparaître. 1 est la première et -1 "
+"la dernière"
 
 msgctxt "help:document.request.line,details:"
 msgid "Add details about the received document"
@@ -149,6 +152,14 @@ msgstr ""
 "Si une signature électronique est requise, le document ne peut être marqué "
 "comme reçu avant d'être signé."
 
+msgctxt "model:document.description.part,name:"
+msgid "Document Description Part"
+msgstr "Sous ensemble de document"
+
+msgctxt "model:document.description.signature.coordinate,name:"
+msgid "Document Signature Coordinate"
+msgstr "Coordonnées de la signature"
+
 msgctxt "model:event.type,name:event_signature_completed"
 msgid "Signature Completed"
 msgstr "Finalisation du processus de signature"
@@ -156,7 +167,3 @@ msgstr "Finalisation du processus de signature"
 msgctxt "model:event.type,name:event_signature_failed"
 msgid "Signature Failed"
 msgstr "Echec du processus de signature"
-
-msgctxt "model:document.description.signature.coordinate,name:"
-msgid "Document Signature Coordinate"
-msgstr "Coordonnées de la signature"
