--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -974,9 +974,35 @@ msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
 
+msgctxt "help:extra_premium.kind,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "help:extra_premium.kind,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
+msgctxt "help:offered.exclusion,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
 msgctxt "help:offered.exclusion,groups:"
 msgid "Exclusion kind groups"
 msgstr "Groupes de type d'exclusion"
+
+msgctxt "help:offered.exclusion,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
 
 msgctxt "help:offered.item.description,code:"
 msgid ""
