--- a/modules/party_ssn/locale/fr.po
+++ b/modules/party_ssn/locale/fr.po
@@ -24,7 +24,7 @@ msgstr "NIR"
 
 msgctxt "field:party.party,ssn_required:"
 msgid "SSN Required"
-msgstr "Numéro de SS obligatoire"
+msgstr "NIR obligatoire"
 
 msgctxt "help:offered.item.description,ssn_required:"
 msgid "If set to True, SSN will be required"
@@ -55,6 +55,7 @@ msgid "Invalid SSN : incorrect year or month of birth"
 msgstr ""
 "Les chiffres de 2 à 6 ne correspondent pas à l'année et mois de naissance."
 
-msgctxt "model:ir.message,text:msg_ssn_required"
-msgid "SSN required for the insured person %(rec_name)s"
-msgstr "NIR requis pour l'assuré %(rec_name)s"
+msgctxt "model:ir.message,text:msg_ssn_required_for_insured"
+msgid "SSN required for this insured person %(rec_name)s"
+msgstr ""
+"NIR requis pour la personne assurée %(rec_name)s"
