--- a/modules/premium/locale/fr.po
+++ b/modules/premium/locale/fr.po
@@ -58,10 +58,6 @@ msgctxt "field:account.fee,invoice_amount_threshold:"
 msgid "Invoice Amount Threshold"
 msgstr "Seuil du montant de la facture"
 
-msgctxt "help:account.fee,invoice_amount_threshold:"
-msgid "If set, the fee will not be applied if the total amount of the associated invoice exceeds it"
-msgstr "Si renseigné, le frais ne sera pas appliqué si le montant total de la quittance associée est supérieur"
-
 msgctxt "field:account.fee,name:"
 msgid "Name"
 msgstr "Nom"
@@ -565,6 +561,14 @@ msgstr "Identifiant XML"
 msgctxt "help:account.fee,amount:"
 msgid "In company's currency"
 msgstr "Dans la devise de la société"
+
+msgctxt "help:account.fee,invoice_amount_threshold:"
+msgid ""
+"If set, the fee will not be applied if the total amount of the associated "
+"invoice exceeds it"
+msgstr ""
+"Si renseigné, les frais ne seront pas appliqués si le montant total de la "
+"quittance associée est supérieur"
 
 msgctxt "help:offered.option.description,fees:"
 msgid "Fees that applies if this option is subscribed"
