--- a/modules/endorsement_insurance/locale/fr.po
+++ b/modules/endorsement_insurance/locale/fr.po
@@ -328,9 +328,17 @@ msgctxt "field:contract.manage_exclusions.exclusion,action:"
 msgid "Action"
 msgstr "Action"
 
+msgctxt "field:contract.manage_exclusions.exclusion,comment:"
+msgid "Comment"
+msgstr "Commentaire"
+
 msgctxt "field:contract.manage_exclusions.exclusion,exclusion:"
 msgid "Exclusion Kind"
 msgstr "Type d'exclusion"
+
+msgctxt "field:contract.manage_exclusions.exclusion,exclusion_src:"
+msgid "Exclusion Source"
+msgstr "Exclusion Originale"
 
 msgctxt "field:contract.manage_exclusions.exclusion,id:"
 msgid "ID"
@@ -545,7 +553,7 @@ msgctxt "field:endorsement.contract.covered_element.option,definition:"
 msgid "Definition"
 msgstr "Définition"
 
-msgctxt "field:endorsement.contract.covered_element.option,exclusion_list:"
+msgctxt "field:endorsement.contract.covered_element.option,exclusions:"
 msgid "Exclusion Endorsements"
 msgstr "Modification des exclusions"
 
@@ -1437,17 +1445,13 @@ msgctxt ""
 msgid "Void"
 msgstr "Sans Effet"
 
-msgctxt "field:contract.manage_exclusions.exclusion,comment:"
-msgid "Comment"
-msgstr "Commentaire"
-
-msgctxt "field:contract.manage_exclusions.exclusion,exclusion_src:"
-msgid "Exclusion Source"
-msgstr "Exclusion Originale"
-
 msgctxt "selection:contract.manage_exclusions.exclusion,action:"
 msgid "Added"
 msgstr "Ajoutée"
+
+msgctxt "selection:contract.manage_exclusions.exclusion,action:"
+msgid "Modified"
+msgstr "Modifiée"
 
 msgctxt "selection:contract.manage_exclusions.exclusion,action:"
 msgid "Nothing"
@@ -1456,10 +1460,6 @@ msgstr "Rien"
 msgctxt "selection:contract.manage_exclusions.exclusion,action:"
 msgid "Removed"
 msgstr "Retirée"
-
-msgctxt "selection:contract.manage_exclusions.exclusion,action:"
-msgid "Modified"
-msgstr "Modifiée"
 
 msgctxt "selection:endorsement.contract.covered_element,action:"
 msgid "Add"
