--- a/modules/party_employment/locale/fr.po
+++ b/modules/party_employment/locale/fr.po
@@ -218,6 +218,10 @@ msgctxt "field:party.work_section,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:party.work_section,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
+
 msgctxt "field:party.work_section,id:"
 msgid "ID"
 msgstr "Identifiant"
