--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12968 Crash lors de l'importation du fichier JSON à partir du point d'entrée 'Importer un fichier'
 * BUG#12958 Correctif de l'import / export des processus
 * OTH#00000 Retrait d'une balise invalide dans les icônes
 * FEA#12410 Possibilité de forcer le contenu d'un champ O2M en readonly
