--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12910 Fix an edge case when computing prorated amounts
+
 Version 2.6 - 2019-10-11
 * BUG#12968 Crash when importing json file from entry point 'import file'
 * BUG#12958 Fix processes Import / export
