--- a/modules/bank_cog/doc/en/CHANGELOG
+++ b/modules/bank_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Speedup bank test case
+
 Version 2.6 - 2019-10-11
 * OTH#0000 Fix typo in bic code
 * BUG#12637 Bics link to wrong bank in Coog with Coog import default file
