--- a/modules/endorsement_process/doc/en/CHANGELOG
+++ b/modules/endorsement_process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12985 Restore behavior of wizard asking for generation of endorsements
+
 Version 2.6 - 2019-10-11
 * OTH#0000 Hotfix on client crash due to domain
 
