contract: fix clearing of status option when reactivating (#3233)
Fix #12942

--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12942 Fix clearing of status of options when reactivating contract
+
 Version 2.6 - 2019-10-11
 * BUG#12971 crash and visibility correction of manage options wizard
 * BUG#12759 Raise error when covered person is covered under the same options at same date
