--- a/modules/endorsement_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/endorsement_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12996 Fix crash when applying contract billing information endorsement which occures when changing direct debit day
+
 Version 2.6 - 2019-10-11
 * BUG#12266 Termination endorsement should trigger invoicing from effective date plus one day
 * BUG#11726 Set possible payers when creating billing endorsements
